# marshal

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  docker-compose.yml  upload-files.sh
.github/workflows/: build-attention.yml  build-gnn.yml  build-graph-node.yml  build-native.yml  build-router.yml  build-tiny-dancer.yml  ci.yml
benchmarks/: package.json
config/caddy/: Caddyfile  Caddyfile.authenticated
crates/bpe-core/: Cargo.toml
crates/bpe-core/src/: acl.rs  auth.rs  config.rs  error.rs  lib.rs  metrics.rs  middleware.rs  permissions.rs  validation.rs
crates/bpe-core/src/approval/: engine.rs  models.rs
crates/bpe-core/src/audit/: logger.rs  mod.rs  models.rs  query.rs  reversal.rs
crates/bpe-core/src/db/: migrations.rs  mod.rs  pool.rs
crates/bpe-core/src/entity/: attributes.rs  interactions.rs  mod.rs  models.rs  registry.rs  relationships.rs
crates/bpe-core/src/integration/: engine.rs  mod.rs  models.rs  ruflo.rs
crates/bpe-core/src/knowledge/: engine.rs  models.rs
crates/bpe-core/src/reporting/: engine.rs  mod.rs  models.rs  notifications.rs
crates/bpe-core/src/timekeeping/: absences.rs  audit_trail.rs  employees.rs  kelly.rs  leave_balances.rs  migration.rs  mod.rs  models.rs  pay_codes.rs  reports.rs  roster.rs  stations.rs  time_entries.rs  timecards.rs  validation.rs
crates/bpe-core/src/workflow/: engine.rs  mod.rs  models.rs  state_machine.rs
crates/bpe-server/: Cargo.toml
crates/bpe-server/src/: lib.rs  main.rs
crates/bpe-server/src/routes/: acl.rs  approvals.rs  audit.rs  entities.rs  entity_types.rs  health.rs  integrations.rs  knowledge.rs  mod.rs  reports.rs  ruflo.rs  workflows.rs
crates/bpe-server/src/routes/timekeeping/: absences.rs  audit.rs  employees.rs  kelly.rs  leave_balances.rs  mod.rs  pay_codes.rs  reports.rs  roster.rs  stations.rs  time_entries.rs  timecards.rs  validation.rs
crates/bpe-server/tests/: api_tests.rs
crates/bpe-server/tests/common/: mod.rs
crates/goal-rag/: .dockerignore  Cargo.toml  Dockerfile  config.toml  docker-compose.yml
crates/goal-rag/frontend/: index.html  tailwind.config.js  vite.config.ts
crates/goal-rag/frontend/src/: App.tsx  index.css
crates/goal-rag/frontend/src/api/: client.ts  types.ts
crates/goal-rag/frontend/src/components/: ChatInterface.tsx  CitationCard.tsx  DocumentList.tsx  FileUpload.tsx  JsonViewer.tsx  Layout.tsx  ResultPanel.tsx  Sidebar.tsx  TopBar.tsx
crates/goal-rag/frontend/src/context/: AppContext.tsx
crates/goal-rag/frontend/src/pages/: AnalyticsPage.tsx  ChatPage.tsx  DocumentsPage.tsx  FilesPage.tsx  RagQueryPage.tsx  SystemPage.tsx  ToolPage.tsx  WelcomePage.tsx
crates/goal-rag/src/: config.rs  error.rs  lib.rs  validation.rs
crates/goal-rag/src/analytics/: aggregation_types.rs  aggregator.rs  classifier.rs  jobs.rs  learning.rs  mod.rs  network.rs  pattern_learner.rs  recommender.rs  storage.rs  team_manager.rs  timeline.rs  types.rs
crates/goal-rag/src/embeddings/: mod.rs  onnx_embedder.rs
crates/goal-rag/src/generation/: citation.rs  mod.rs  ollama.rs  prompt.rs
crates/goal-rag/src/ingestion/: chunker.rs  external_parser.rs  mod.rs  parser.rs  processor.rs
crates/goal-rag/src/learning/: answer_cache.rs  feedback.rs  knowledge_store.rs  mod.rs
crates/goal-rag/src/postgres/: config.rs  learner.rs  listener.rs  mod.rs  pool.rs  schema.rs
crates/goal-rag/src/processing/: file_tier.rs  job_queue.rs  mod.rs  worker.rs
crates/goal-rag/src/providers/: anthropic.rs  document_store.rs  embedding.rs  entity_embeddings.rs  interaction_classifier.rs  llm.rs  local.rs  mod.rs  ollama.rs  openai.rs  pgvector.rs  reranker.rs  vector_store.rs
crates/goal-rag/src/providers/gcp/: auth.rs  document_ai.rs  gcs_store.rs  gemini_client.rs  mod.rs  vertex_embedder.rs  vertex_vector.rs
crates/goal-rag/src/retrieval/: mod.rs  search.rs
crates/goal-rag/src/server/: middleware.rs  mod.rs  notifications.rs  state.rs  trial_lifecycle.rs
crates/goal-rag/src/server/routes/: acl.rs  analytics.rs  analytics_aggregations.rs  auth.rs  documents.rs  files.rs  jobs.rs  mod.rs  query.rs  realtime.rs  registration.rs  storage.rs  trial_admin.rs  trial_gdpr.rs
crates/goal-rag/src/server/routes/tools/: mod.rs  read.rs  report.rs  search.rs  sql.rs  write.rs
crates/goal-rag/src/storage/: database.rs  mod.rs  pg_registry.rs
crates/goal-rag/src/types/: document.rs  file_record.rs  mod.rs  query.rs  response.rs
crates/goalrag-mcp/: Cargo.toml
crates/goalrag-mcp/src/: main.rs
crates/marshal-ui-react/: index.html  vite.config.ts
crates/ruvector-attention/: Cargo.toml
crates/ruvector-cluster/: Cargo.toml
crates/ruvector-gnn/: Cargo.toml
crates/ruvector-gnn-node/: Cargo.toml
crates/ruvector-gnn-wasm/: Cargo.toml
crates/ruvector-node/: Cargo.toml
crates/ruvector-replication/: Cargo.toml
crates/ruvector-router-ffi/: Cargo.toml
crates/ruvector-server/: Cargo.toml
crates/ruvector-wasm/: Cargo.toml
dashboard/: index.html
docker/: Caddyfile.compose  Caddyfile.frontend  Caddyfile.ingress  Dockerfile.bpe-server  Dockerfile.frontend  Dockerfile.goal-rag
docs/: DEPLOYMENT.md  analytics-api.md  architecture-review.md  bpe-architecture.md  bpe-ui-improvement-plan.md  improvement-plan.md  qa-reliability-report.md  quality-audit-2026-05-07.md  quality-audit-pass2-2026-05-07.md  quality-audit-pass3-2026-05-07.md  ruflo-integration-plan.md  security-audit.md
docs/analytics/: API-REFERENCE.md  ARCHITECTURE.md  FRONTEND-GUIDE.md
docs/development/: PUBLISHING.md
docs/state/: system-state-2026-01-27.md
k8s/: configmap.yaml  ingress.yaml  namespace.yaml  ollama-pvc.yaml  secrets.yaml
k8s/deployments/: bpe-server.yaml  caddy-ingress.yaml  frontend.yaml  goal-rag.yaml  ollama.yaml  postgrest.yaml
k8s/hpa/: bpe-server-hpa.yaml  goal-rag-hpa.yaml
k8s/services/: bpe-server-svc.yaml  caddy-ingress-svc.yaml  frontend-svc.yaml  goal-rag-svc.yaml  ollama-svc.yaml  postgrest-svc.yaml
scripts/: seed-bpe-demo.sh
simple-rag/: Cargo.toml  main.rs
simple-rag/test_docs/: doc1.txt  doc2.txt  doc3.txt
(+181 files in other folders)
