[package]
name = "simple-rag"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client for Ollama API
reqwest = { version = "0.12", features = ["json"] }

# File processing
walkdir = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Async
tokio = { version = "1.41", features = ["full"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
sha2 = "0.10"
