[package]
name = "bpe-server"
version.workspace = true
edition.workspace = true
description = "Business Process Engine - HTTP server"

[dependencies]
bpe-core = { path = "../bpe-core" }
axum = { version = "0.7", features = ["json"] }
tokio = { workspace = true, features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "timeout"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
anyhow = { workspace = true }

[lib]
name = "bpe_server"
path = "src/lib.rs"

[[bin]]
name = "bpe-server"
path = "src/main.rs"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
