[package]
name = "goal-rag"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Full-stack RAG system with document ingestion, vector search, and LLM-powered answers with citations"
keywords = ["rag", "vector-database", "embeddings", "llm", "citations"]
categories = ["science", "machine-learning"]

[dependencies]
# Core ruvector
ruvector-core = { path = "../ruvector-core" }

# HTTP Server (Axum)
axum = { version = "0.7", features = ["json", "multipart", "tokio", "ws"] }
tokio = { workspace = true, features = ["full", "fs"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "limit", "fs"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# File Parsing
pdf-extract = "0.8"
lopdf = "0.34"
docx-rs = "0.4"
calamine = "0.26"
scraper = "0.20"
csv = "1.3"
zip = "2.2"
quick-xml = "0.37"

# ONNX Embeddings
ort = { version = "2.0.0-rc.9", features = ["download-binaries", "half"] }
tokenizers = { version = "0.20", default-features = false, features = ["progressbar", "onig"] }
ndarray = { workspace = true, features = ["rayon"] }
half = "2.4"

# HTTP Client (for Ollama)
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
futures-util = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"

# Text Processing
unicode-segmentation = "1.11"
regex = "1.11"
pulldown-cmark = "0.12"

# Utilities
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
bcrypt = "0.16"
walkdir = "2.5"
mime_guess = "2.0"
tempfile = "3.14"
dirs = "5.0"
bytes = "1.7"

# Async utilities
async-trait = "0.1"

# Concurrency
parking_lot = { workspace = true }
dashmap = { workspace = true }
num_cpus = "1.16"
futures = "0.3"
once_cell = "1.19"

# Database
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# PostgreSQL (optional - for learning from database changes and pgvector)
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"], optional = true }
deadpool-postgres = { version = "0.14", optional = true }
postgres-types = { version = "0.2", features = ["derive"], optional = true }
pgvector = { version = "0.4", features = ["postgres"], optional = true }

# CLI (optional)
clap = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }
console = { workspace = true, optional = true }

# GCP (optional)
google-cloud-auth = { version = "0.17", optional = true }
google-cloud-storage = { version = "0.22", optional = true }
base64 = "0.22"
ring = { version = "0.17", optional = true }
pem = { version = "3.0", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["pdf", "docx", "xlsx"]
pdf = []
docx = []
xlsx = []
cli = ["dep:clap", "dep:indicatif", "dep:console"]
all-parsers = ["pdf", "docx", "xlsx"]
gcp = ["dep:google-cloud-auth", "dep:google-cloud-storage", "dep:ring", "dep:pem"]
postgres = ["dep:tokio-postgres", "dep:deadpool-postgres", "dep:postgres-types", "dep:pgvector"]

[[bin]]
name = "goal-rag-server"
path = "src/bin/server.rs"
